# cnc-formats

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ci-local.ps1  ci-local.sh  deny.toml
.cargo/: audit.toml
.github/: copilot-instructions.md
.github/workflows/: audit.yml  ci.yml  fuzz.yml  publish.yml  release.yml
benches/: callgrind_hotpaths.rs  criterion_formats.rs  criterion_streaming.rs
benches/support/: archives.rs  export_fixtures.rs  extra_formats.rs  media.rs  mix_only.rs  music.rs  stream_media.rs  text.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_aud.rs  fuzz_big.rs  fuzz_cps.rs  fuzz_csf.rs  fuzz_dip.rs  fuzz_eng.rs  fuzz_fnt.rs  fuzz_hva.rs  fuzz_ini.rs  fuzz_lcw.rs  fuzz_lut.rs  fuzz_meg.rs  fuzz_miniyaml.rs  fuzz_mix.rs  fuzz_pal.rs  fuzz_shp.rs  fuzz_shp_ts.rs  fuzz_tmp.rs  fuzz_tmp_ts.rs  fuzz_vqa.rs  fuzz_vqp.rs  fuzz_vxl.rs  fuzz_w3d.rs  fuzz_wsa.rs
samples/: README.md
skills/cnc-formats/: SKILL.md
src/: aud.rs  error.rs  lcw.rs  lib.rs  mix.rs  pal.rs  read.rs  shp.rs  sniff.rs  stream_io.rs  xor_delta.rs
src/adl/: dune2.rs  mod.rs  tests.rs
src/apt/: mod.rs  tests.rs
src/aud/: encode.rs  info.rs  mod.rs  stream.rs  tests.rs  tests_stream.rs  tests_validation.rs
src/bag_idx/: mod.rs  tests.rs
src/big/: mod.rs  stream.rs  tests.rs
src/bin_td/: mod.rs  tests.rs
src/convert/: export.rs  import.rs  mkv.rs  mod.rs  tests.rs  tests_avi.rs  tests_mkv.rs  tests_roundtrip.rs  tests_validation.rs
src/convert/avi/: decode.rs  encode.rs  mod.rs
src/convert/mkv/: ebml.rs  mod.rs
src/cps/: mod.rs  tests.rs
src/csf/: mod.rs  tests.rs
src/d2_map/: mod.rs  tests.rs
src/dds/: mod.rs  tests.rs
src/dip/: mod.rs  tests.rs
src/eng/: mod.rs  tests.rs
src/fnt/: mod.rs  tests.rs
src/hva/: mod.rs  tests.rs
src/icn/: mod.rs  tests.rs
src/ini/: mod.rs  tests.rs
src/iso9660/: entry_reader.rs  mod.rs  stream.rs  tests.rs
src/lcw/: mod.rs  tests.rs
src/lut/: mod.rs  tests.rs
src/map_ra2/: mod.rs  tests.rs
src/map_sage/: mod.rs  tests.rs
src/meg/: mod.rs  stream.rs  tests.rs  tests_validation.rs
src/mid/: mod.rs  tests.rs
src/miniyaml/: mod.rs  tests.rs  tests_validation.rs
src/mix/: builtin_names.rs  entry_reader.rs  known_names.rs  known_names_ra2.txt  known_names_td_ra1.txt  lmd.rs  metadata.rs  mod.rs  overlay.rs  stream.rs  tests.rs  tests_encrypted.rs  tests_streaming.rs  tests_validation.rs
src/mix_crypt/: bignum.rs  mod.rs  tests.rs  tests_vectors.rs
src/mpr/: mod.rs  tests.rs
src/pak/: mod.rs  tests.rs
src/pal/: mod.rs  tests.rs
src/sage_str/: mod.rs  tests.rs
src/shp/: encode.rs  mod.rs  tests.rs  tests_validation.rs
src/shp_d2/: mod.rs  tests.rs
src/shp_ts/: mod.rs  tests.rs
src/sniff/: mod.rs  tests.rs
src/tga/: mod.rs  tests.rs
src/tmp/: encode.rs  mod.rs  tests.rs  tests_ts.rs  ts.rs
src/transcribe/: ROADMAP.md  mod.rs  onset.rs  pitch.rs  quantize.rs  tests.rs  tests_validation.rs
src/voc/: mod.rs  tests.rs
src/vqa/: decode.rs  encode.rs  info.rs  mod.rs  playback.rs  render.rs  snd.rs  snd_decode.rs  snd_ima.rs  stream.rs  tests.rs  tests_decode.rs  tests_playback.rs  tests_playback2.rs  tests_stream.rs  timing.rs
src/vqa/playback/: audio.rs  buffer.rs  control.rs  info.rs  mod.rs
src/vqp/: mod.rs  tests.rs
src/vxl/: mod.rs  tests.rs
src/w3d/: mod.rs  tests.rs
src/wnd/: mod.rs  tests.rs
src/wsa/: mod.rs  tests.rs
src/xmi/: convert.rs  mod.rs  tests.rs
tests/: cli.rs  cli_check.rs  cli_convert.rs  cli_extract.rs  cli_inspect.rs  cli_list.rs  integration.rs  perf_alloc.rs
