[package]
name = "cnc-formats"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Clean-room binary format parsers for Command & Conquer game files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/iron-curtain-engine/cnc-formats"
keywords = ["cnc", "red-alert", "command-conquer", "parser", "gamedev"]
categories = ["parser-implementations", "game-development"]
authors = ["Iron Curtain contributors"]

[features]
default = ["encrypted-mix"]
encrypted-mix = ["dep:blowfish"]
miniyaml = []

[[bin]]
name = "miniyaml2yaml"
path = "src/bin/miniyaml2yaml.rs"
required-features = ["miniyaml"]

[dependencies]
blowfish = { version = "0.9", optional = true }

[dev-dependencies]

# ── Release profile ──────────────────────────────────────────────────────
# LTO enables cross-crate inlining and dead-code elimination, which is
# particularly important for this crate since it's used as a library by
# the Iron Curtain engine.  `codegen-units = 1` maximises whole-program
# optimisation at the cost of compile time (acceptable for release builds).
[profile.release]
lto = true
codegen-units = 1
