[package]
name = "cnc-formats"
version = "0.1.0-alpha.1"
edition = "2021"
rust-version = "1.85"
description = "Clean-room binary format parsers for Command & Conquer game files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/iron-curtain-engine/cnc-formats"
keywords = ["cnc", "red-alert", "command-conquer", "parser", "gamedev"]
categories = ["parser-implementations", "game-development"]
authors = ["David Krasnitsky <dikaveman@gmail.com>"]
readme = "README.md"
exclude = [".github/", "fuzz/", "images/", "skills/", ".agents/"]

[[bin]]
name = "cncf"
path = "src/bin/cnc-formats/main.rs"
required-features = ["cli"]

[dependencies]
base64 = { version = "0.22", optional = true }
blowfish = { version = "0.9", optional = true }
clap = { version = "4.6.0", features = ["derive"], optional = true }
gif = { version = "0.14.1", optional = true }
hound = { version = "3.5", optional = true }
midly = { version = "0.5", optional = true }
png = { version = "0.18.1", optional = true }
rustysynth = { version = "1.3", optional = true }
sha2 = { version = "0.10", optional = true }
strict-path = { version = "0.1.1", optional = true }

[features]
default = [
    "encrypted-mix",
    "cli",
    "convert",
    "miniyaml",
    "midi",
    "adl",
    "xmi",
    "transcribe",
    "meg",
]
encrypted-mix = ["dep:blowfish", "dep:base64"]
miniyaml = []
midi = ["dep:midly", "dep:rustysynth"]
adl = []
xmi = ["midi"]
transcribe = ["midi"]
meg = []
cli = ["dep:clap", "dep:strict-path", "dep:sha2"]
convert = ["dep:png", "dep:hound", "dep:gif"]

[dev-dependencies]

# ── Release profile ──────────────────────────────────────────────────────
# LTO enables cross-crate inlining and dead-code elimination, which is
# particularly important for this crate since it's used as a library by
# the Iron Curtain engine.  `codegen-units = 1` maximises whole-program
# optimisation at the cost of compile time (acceptable for release builds).
[profile.release]
lto = true
codegen-units = 1
