# SPDX-License-Identifier: MIT OR Apache-2.0
# Copyright (c) 2025-present Iron Curtain contributors

[package]
name = "cnc-formats-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.cnc-formats]
path = ".."
features = ["miniyaml", "meg"]

# One target per format module, as required by V38.

[[bin]]
name = "fuzz_pal"
path = "fuzz_targets/fuzz_pal.rs"
doc = false

[[bin]]
name = "fuzz_lcw"
path = "fuzz_targets/fuzz_lcw.rs"
doc = false

[[bin]]
name = "fuzz_shp"
path = "fuzz_targets/fuzz_shp.rs"
doc = false

[[bin]]
name = "fuzz_mix"
path = "fuzz_targets/fuzz_mix.rs"
doc = false

[[bin]]
name = "fuzz_aud"
path = "fuzz_targets/fuzz_aud.rs"
doc = false

[[bin]]
name = "fuzz_tmp"
path = "fuzz_targets/fuzz_tmp.rs"
doc = false

[[bin]]
name = "fuzz_vqa"
path = "fuzz_targets/fuzz_vqa.rs"
doc = false

[[bin]]
name = "fuzz_wsa"
path = "fuzz_targets/fuzz_wsa.rs"
doc = false

[[bin]]
name = "fuzz_fnt"
path = "fuzz_targets/fuzz_fnt.rs"
doc = false

[[bin]]
name = "fuzz_ini"
path = "fuzz_targets/fuzz_ini.rs"
doc = false

[[bin]]
name = "fuzz_miniyaml"
path = "fuzz_targets/fuzz_miniyaml.rs"
doc = false

[[bin]]
name = "fuzz_csf"
path = "fuzz_targets/fuzz_csf.rs"
doc = false

[[bin]]
name = "fuzz_cps"
path = "fuzz_targets/fuzz_cps.rs"
doc = false

[[bin]]
name = "fuzz_w3d"
path = "fuzz_targets/fuzz_w3d.rs"
doc = false

[[bin]]
name = "fuzz_hva"
path = "fuzz_targets/fuzz_hva.rs"
doc = false

[[bin]]
name = "fuzz_vxl"
path = "fuzz_targets/fuzz_vxl.rs"
doc = false

[[bin]]
name = "fuzz_shp_ts"
path = "fuzz_targets/fuzz_shp_ts.rs"
doc = false

[[bin]]
name = "fuzz_tmp_ts"
path = "fuzz_targets/fuzz_tmp_ts.rs"
doc = false

[[bin]]
name = "fuzz_big"
path = "fuzz_targets/fuzz_big.rs"
doc = false

[[bin]]
name = "fuzz_dip"
path = "fuzz_targets/fuzz_dip.rs"
doc = false

[[bin]]
name = "fuzz_eng"
path = "fuzz_targets/fuzz_eng.rs"
doc = false

[[bin]]
name = "fuzz_lut"
path = "fuzz_targets/fuzz_lut.rs"
doc = false

[[bin]]
name = "fuzz_vqp"
path = "fuzz_targets/fuzz_vqp.rs"
doc = false

[[bin]]
name = "fuzz_meg"
path = "fuzz_targets/fuzz_meg.rs"
doc = false

[workspace]
members = ["."]
